tests/libdef_scoped/bar/test.js
commonValueNoOverride as empty; // error: string ~> empty
commonValueWithOverride as empty; // error: boolean ~> empty
fooSpecific; // error: not-bound
barSpecific as empty; // error: string ~> empty
